--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,10 +1,18 @@
-<h1>New Restaurant</h1>
+<div class="frame">
+  <h1>New Restaurant</h1>
 
-<!-- app/views/restaurants/_form.html.erb -->
-<%= simple_form_for(@restaurant) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone_number %>
-  <%= f.input :category %>
-  <%= f.submit %>
-<% end %>
+  <!-- app/views/restaurants/_form.html.erb -->
+  <%= simple_form_for(@restaurant) do |f| %>
+    <div class="ui-box">
+      <%= f.input :name %>
+      <%= f.input :address %>
+      <%= f.input :phone_number %>
+      <%= f.input :category,
+                  collection: Restaurant::CATEGORIES.map { |c| [c.capitalize, c] },
+                  prompt: "Select a category" %>
+    </div>
+    <%= f.submit %>
+  <% end %>
+  <hr>
+  <%= link_to "Return to List of Restaurants", restaurants_path, class:"no-underline" %>
+</div>
