--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,1 +1,12 @@
-<h1>New Review</h1>
+<div class="frame">
+  <h1>New Review</h1>
+  <%= simple_form_for(@review, url: restaurant_reviews_path(@restaurant)) do |f| %>
+    <div class="ui-box">
+      <%= f.input :rating, collection: 0..5, prompt: "Select rating" %>
+      <%= f.input :content %>
+    </div>
+    <%= f.submit %>
+  <% end %>
+  <hr>
+  <%= link_to "Return to Restaurant View", restaurant_path(@restaurant), class:"no-underline" %>
+</div>
